Fixed search z-index with tagline on mobile

--- a/themes/ek2012/less/ek.less
+++ b/themes/ek2012/less/ek.less
@@ -119,6 +119,7 @@ h5 {
 			position: absolute;
 			top: 20px;
 			right: 0px;
+			z-index: 2;
 		}
 		@media (max-width: 568px) { // iphone5 landscape needs the social links and search below the tagline, or else tumblr collides with logo
 			position: static;
@@ -147,10 +148,12 @@ h5 {
 		margin: 0;
 		left: 392px;
 		@media(max-width: 979px) {
-			position: static;
+			position: relative;
+			left: 0;
 			padding-left: 0;
 			display: block;
 			margin: 10px 0;
+			z-index: -1;
 		}
 	}
 }
@@ -283,7 +286,7 @@ h5 {
 			    text-align: center;
 			    border-bottom: @grid/2 solid @linkColor;
 			    vertical-align: bottom;
-			    padding: 0 16px;
+			    padding: 0 16px 4px 16px;
 			    text-transform: uppercase;
 			    font-size: 12px;
 			    font-weight: bold;
@@ -307,7 +310,7 @@ h5 {
 			    }
 			    >a {
 			    	display: block;
-				    line-height: 20px;
+				    line-height: 14px;
 			    }
 		    	div {
 		    		position: absolute;
